--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <p>Totaalprijs inclusief verzendkosten (ex BTW): €<span id="wbc-price-total"></span></p>
         </div>
 
-        <form action="https://formspree.io/f/xwpezvep" method="POST">
+        <form action="https://formspree.io/f/mqazorpq" method="POST">
             <label for="company-name">Bedrijfsnaam:</label>
             <input type="text" id="company-name" name="company-name" required>
 
