--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <div id="warning-message" class="warning-message">
                 Vul aub alle velden in om door te gaan
             </div>
-            <button type="submit" id="submit-request" disabled>Add to Cart</button>
+            <button type="submit" id="submit-request" disabled>Ontvang vrijblijvend een aanbod per mail</button>
             <div id="loading-indicator">
                 Formulier wordt verstuurd, een moment alstublieft...
             </div>
